Cython Trial/RSA_API.h

	///////////////////////////////////////////////////////////
	// Status and Error Reporting
	///////////////////////////////////////////////////////////
	// Note: The assigned enumeration values in this list have
	//        been modified between V1 and V2 releases.
	///////////////////////////////////////////////////////////

	typedef enum
	{
		//-----------------
		// User errors
		//-----------------

		noError = 0,

		// Connection
		errorNotConnected = 101,
		errorIncompatibleFirmware,
		errorBootLoaderNotRunning,
		errorTooManyBootLoadersConnected,
		errorRebootFailure,

		// POST
		errorPOSTFailureFPGALoad = 201,
		errorPOSTFailureHiPower,
		errorPOSTFailureI2C,
		errorPOSTFailureGPIF,
		errorPOSTFailureUsbSpeed,
		errorPOSTDiagFailure,

		// General Msmt
		errorBufferAllocFailed = 301,
		errorParameter,
		errorDataNotReady,

		// Spectrum
		errorParameterTraceLength = 1101,
		errorMeasurementNotEnabled,
		errorSpanIsLessThanRBW,
		errorFrequencyOutOfRange,

		// IF streaming
		errorStreamADCToDiskFileOpen = 1201,
        errorStreamADCToDiskAlreadyStreaming,
        errorStreamADCToDiskBadPath,
        errorStreamADCToDiskThreadFailure,
        errorStreamedFileInvalidHeader,
        errorStreamedFileOpenFailure,
        errorStreamingOperationNotSupported,
        errorStreamingFastForwardTimeInvalid,
        errorStreamingInvalidParameters,
        errorStreamingEOF,

		// IQ streaming
		errorIQStreamInvalidFileDataType = 1301,
		errorIQStreamFileOpenFailed,
		errorIQStreamBandwidthOutOfRange,


		//-----------------
		// Internal errors
		//-----------------
		errorTimeout = 3001,
		errorTransfer,
		errorFileOpen,
		errorFailed,
		errorCRC,
		errorChangeToFlashMode,
		errorChangeToRunMode,
		errorDSPLError,
		errorLOLockFailure,
		errorExternalReferenceNotEnabled,
		errorLogFailure,
		errorRegisterIO,
        errorFileRead,

		errorDisconnectedDeviceRemoved = 3101,
		errorDisconnectedDeviceNodeChangedAndRemoved,
		errorDisconnectedTimeoutWaitingForADcData,
		errorDisconnectedIOBeginTransfer,
		errorOperationNotSupportedInSimMode,

		errorFPGAConfigureFailure = 3201,
        errorCalCWNormFailure,
        errorSystemAppDataDirectory,
        errorFileCreateMRU,
        errorDeleteUnsuitableCachePath,
        errorUnableToSetFilePermissions,
        errorCreateCachePath,
        errorCreateCachePathBoost,
        errorCreateCachePathStd,
        errorCreateCachePathGen,
        errorBufferLengthTooSmall,
        errorRemoveCachePath,
        errorGetCachingDirectoryBoost,
        errorGetCachingDirectoryStd,
        errorGetCachingDirectoryGen,
        errorInconsistentFileSystem,

		errorWriteCalConfigHeader = 3301,
		errorWriteCalConfigData,
		errorReadCalConfigHeader,
		errorReadCalConfigData,
		errorEraseCalConfig,
		errorCalConfigFileSize,
		errorInvalidCalibConstantFileFormat,
		errorMismatchCalibConstantsSize,
		errorCalConfigInvalid,

        // flash
        errorFlashFileSystemUnexpectedSize = 3401,
        errorFlashFileSystemNotMounted,
        errorFlashFileSystemOutOfRange,
        errorFlashFileSystemIndexNotFound,
        errorFlashFileSystemReadErrorCRC,
        errorFlashFileSystemReadFileMissing,
        errorFlashFileSystemCreateCacheIndex,
        errorFlashFileSystemCreateCachedDataFile,
        errorFlashFileSystemUnsupportedFileSize,
        errorFlashFileSystemInsufficentSpace,
        errorFlashFileSystemInconsistentState,
        errorFlashFileSystemTooManyFiles,
        errorFlashFileSystemImportFileNotFound,
        errorFlashFileSystemImportFileReadError,
        errorFlashFileSystemImportFileError,
        errorFlashFileSystemFileNotFoundError,
        errorFlashFileSystemReadBufferTooSmall,
        errorFlashWriteFailure,
        errorFlashReadFailure,
        errorFlashFileSystemBadArgument,
        errorFlashFileSystemCreateFile,

        // Aux monitoring
        errorMonitoringNotSupported = 3501,
        errorAuxDataNotAvailable,

        // battery
        errorBatteryCommFailure = 3601,
		errorBatteryChargerCommFailure = 3602,
		errorBatteryNotPresent = 3603,

		//EST
		errorESTOutputPathFile = 3701,
		errorESTPathNotDirectory,
		errorESTPathDoesntExist,
		errorESTUnableToOpenLog,
		errorESTUnableToOpenLimits,

		// Revision information
		errorRevisionDataNotFound = 3801,
		
		//  alignment
		error112MHzAlignmentSignalLevelTooLow = 3901,
		error10MHzAlignmentSignalLevelTooLow,
		errorInvalidCalConstant,
        errorNormalizationCacheInvalid,
        errorInvalidAlignmentCache,

		// acq status
        errorADCOverrange = 9000,	// must not change the location of these error codes without coordinating with MFG TEST
        errorOscUnlock = 9001,      

		errorNotSupported = 9901,

        errorPlaceholder = 9999,
        notImplemented = -1

	} ReturnStatus;
	// Create a bool type for "plain" C
	typedef uint8_t bool;
	// Complex data type definitions
	typedef struct
	{
		float i;
		float q;
	} Cplx32;
	typedef struct
	{
		int32_t i;
		int32_t q;
	} CplxInt32;
	typedef struct
	{
		int16_t i;
		int16_t q;
	} CplxInt16;
	typedef enum
	{
		adcOverrange = 0x1,				// Bit 0: Overrange - Input to the ADC was outside of its operating range.
		refFreqUnlock = 0x2,			// Bit 1: Reference oscillator unlocked - Loss of locked status on the reference oscillator.
		lo1Unlock = 0x4,				// Bit 2: Internal use only
		lo2Unlock = 0x8,				// Bit 3: Internal use only
		lowSupplyVoltage = 0x10,		// Bit 4: Power fail - Power (5V and Usb) failure detected.
		adcDataLost = 0x20,				// Bit 5: Dropped frame - Loss of ADC data frame samples
		event1pps = 0x40,				// Bit 6: Internal use only
		eventTrig1 = 0x80,				// Bit 7: Internal use only
		eventTrig2 = 0x100,				// Bit 8: Internal use only
	} AcqDataStatus;
	RSA_API_DLL const char*  DEVICE_GetErrorString(ReturnStatus status);		// translate ReturnStatus code into text (char) string
	// Device Search maximum sizes:
	enum { DEVSRCH_MAX_NUM_DEVICES = 20, DEVSRCH_SERIAL_MAX_STRLEN = 100, DEVSRCH_TYPE_MAX_STRLEN = 20 };
	// Device Search, Type 1 (Client provides storage buffers)
	// Example: 
	// int numDev;
	// int devID[RSA_API::DEVSRCH_MAX_NUM_DEVICES];
	// {char|wchar_t} devSN[RSA_API::DEVSRCH_MAX_NUM_DEVICES][RSA_API::DEVSRCH_SERIAL_MAX_STRLEN];
	// {char|wchar_t} devType[RSA_API::DEVSRCH_MAX_NUM_DEVICES][RSA_API::DEVSRCH_TYPE_MAX_STRLEN];
	// rs = RSA_API::DEVICE_Search{W}(&numDev, devID, devSN, devType);
	RSA_API_DLL ReturnStatus DEVICE_Search(int* numDevicesFound, int deviceIDs[], char deviceSerial[][DEVSRCH_SERIAL_MAX_STRLEN], char deviceType[][DEVSRCH_TYPE_MAX_STRLEN]);
	RSA_API_DLL ReturnStatus DEVICE_SearchW(int* numDevicesFound, int deviceIDs[], wchar_t deviceSerial[][DEVSRCH_SERIAL_MAX_STRLEN], wchar_t deviceType[][DEVSRCH_TYPE_MAX_STRLEN]);
	
	
	// Device Search, Type 2 (API provides internal static storage buffers, client may copy if needed)
	// Example: 
	// int numDev;
	// int* devID;						// ptr to devID array
	// const {char|wchar_t}** devSN;	// ptr to array of ptrs to devSN strings
	// const {char|wchar_t}** devType;	// ptr to array of ptrs to devType strings
	// rs = RSA_API::DEVICE_SearchInt{W}(&numDev, &devID, &devSN, &devType);
	RSA_API_DLL ReturnStatus DEVICE_SearchInt(int* numDevicesFound, int* deviceIDs[], const char** deviceSerial[], const char** deviceType[]);
	RSA_API_DLL ReturnStatus DEVICE_SearchIntW(int* numDevicesFound, int* deviceIDs[], const wchar_t** deviceSerial[], const wchar_t** deviceType[]);
	RSA_API_DLL ReturnStatus DEVICE_Connect(int deviceID);
	RSA_API_DLL ReturnStatus DEVICE_Reset(int deviceID);
	RSA_API_DLL ReturnStatus DEVICE_Disconnect();
	// Version Info of connected device
	// Example:  char xyzInfo[DEVINFO_MAX_STRLEN];	DEVICE_Get<xyz>Version(xyzInfo);
	enum { DEVINFO_MAX_STRLEN = 100 };
	RSA_API_DLL ReturnStatus DEVICE_GetNomenclature(char* nomenclature);
	RSA_API_DLL ReturnStatus DEVICE_GetNomenclatureW(wchar_t* nomenclature);
	RSA_API_DLL ReturnStatus DEVICE_GetSerialNumber(char* serialNum);
	RSA_API_DLL ReturnStatus DEVICE_GetAPIVersion(char* apiVersion);
	RSA_API_DLL ReturnStatus DEVICE_GetFWVersion(char* fwVersion);
	RSA_API_DLL ReturnStatus DEVICE_GetFPGAVersion(char* fpgaVersion);
	RSA_API_DLL ReturnStatus DEVICE_GetHWVersion(char* hwVersion);
	// Get all device info strings at once
	typedef struct
	{
		char nomenclature[DEVINFO_MAX_STRLEN];
		char serialNum[DEVINFO_MAX_STRLEN];
		char apiVersion[DEVINFO_MAX_STRLEN];
		char fwVersion[DEVINFO_MAX_STRLEN];
		char fpgaVersion[DEVINFO_MAX_STRLEN];
		char hwVersion[DEVINFO_MAX_STRLEN];
	} DEVICE_INFO;
	RSA_API_DLL ReturnStatus DEVICE_GetInfo(DEVICE_INFO* devInfo);
	
	RSA_API_DLL ReturnStatus DEVICE_GetOverTemperatureStatus(bool* overTemperature);
	RSA_API_DLL ReturnStatus CONFIG_Preset();
	RSA_API_DLL ReturnStatus CONFIG_SetReferenceLevel(double refLevel);
	RSA_API_DLL ReturnStatus CONFIG_GetReferenceLevel(double* refLevel);
	RSA_API_DLL ReturnStatus CONFIG_GetMaxCenterFreq(double* maxCF);
	RSA_API_DLL ReturnStatus CONFIG_GetMinCenterFreq(double* minCF);
	RSA_API_DLL ReturnStatus CONFIG_SetCenterFreq(double cf);
	RSA_API_DLL ReturnStatus CONFIG_GetCenterFreq(double* cf);
	RSA_API_DLL ReturnStatus CONFIG_SetExternalRefEnable(bool exRefEn);
	RSA_API_DLL ReturnStatus CONFIG_GetExternalRefEnable(bool* exRefEn);
	RSA_API_DLL ReturnStatus CONFIG_GetExternalRefFrequency(double* extFreq);
	RSA_API_DLL ReturnStatus CONFIG_GetAutoAttenuationEnable(bool *enable);
	RSA_API_DLL ReturnStatus CONFIG_SetAutoAttenuationEnable(bool enable);
	RSA_API_DLL ReturnStatus CONFIG_GetRFPreampEnable(bool *enable);
	RSA_API_DLL ReturnStatus CONFIG_SetRFPreampEnable(bool enable);
	RSA_API_DLL ReturnStatus CONFIG_GetRFAttenuator(double *value);
	RSA_API_DLL ReturnStatus CONFIG_SetRFAttenuator(double value);
	///////////////////////////////////////////////////////////
	// Trigger Configuration 
	///////////////////////////////////////////////////////////
	
	typedef enum
	{
		freeRun = 0,
		triggered = 1
	} TriggerMode;
	typedef enum
	{
		TriggerSourceExternal = 0,		//  external 
		TriggerSourceIFPowerLevel = 1	//  IF power level
	} TriggerSource;
	typedef enum
	{
		TriggerTransitionLH = 1,		//  Low to High transition		
		TriggerTransitionHL = 2,		//  High to Low transition
		TriggerTransitionEither = 3		//  either Low to High or High to Low transition	
	} TriggerTransition;
	RSA_API_DLL ReturnStatus TRIG_SetTriggerMode(TriggerMode mode);
	RSA_API_DLL ReturnStatus TRIG_GetTriggerMode(TriggerMode* mode);
	RSA_API_DLL ReturnStatus TRIG_SetTriggerSource(TriggerSource source);
	RSA_API_DLL ReturnStatus TRIG_GetTriggerSource(TriggerSource *source);
	RSA_API_DLL ReturnStatus TRIG_SetTriggerTransition(TriggerTransition transition);
	RSA_API_DLL ReturnStatus TRIG_GetTriggerTransition(TriggerTransition *transition);
	RSA_API_DLL ReturnStatus TRIG_SetIFPowerTriggerLevel(double level);
	RSA_API_DLL ReturnStatus TRIG_GetIFPowerTriggerLevel(double *level);
	RSA_API_DLL ReturnStatus TRIG_SetTriggerPositionPercent(double trigPosPercent);
	RSA_API_DLL ReturnStatus TRIG_GetTriggerPositionPercent(double* trigPosPercent);
	RSA_API_DLL ReturnStatus TRIG_ForceTrigger();
    RSA_API_DLL ReturnStatus ALIGN_GetWarmupStatus(bool* warmedUp);
	RSA_API_DLL ReturnStatus ALIGN_GetAlignmentNeeded(bool* needed);
	RSA_API_DLL ReturnStatus ALIGN_RunAlignment();
	RSA_API_DLL ReturnStatus DEVICE_GetEnable(bool* enable);
	RSA_API_DLL ReturnStatus DEVICE_Run();
	RSA_API_DLL ReturnStatus DEVICE_Stop();
	RSA_API_DLL ReturnStatus DEVICE_PrepareForRun();
	RSA_API_DLL ReturnStatus DEVICE_StartFrameTransfer();
	RSA_API_DLL ReturnStatus DEVICE_GetEventStatus(int eventID, bool* eventOccurred, uint64_t* eventTimestamp);