Cython Trial/rsa_api_h.pxd

cdef extern from 'RSA_API.h':
    
    ##########################################################
    # Status and Error Reporting
    ##########################################################
    
    ctypedef unsigned long long uint64_t
    
    ctypedef enum ReturnStatus:
        noError = 0

        # Connection
        errorNotConnected = 101
        errorIncompatibleFirmware = 102
        errorBootLoaderNotRunning = 103
        errorTooManyBootLoadersConnected = 104
        errorRebootFailure = 105

        # POST
        errorPOSTFailureFPGALoad = 201
        errorPOSTFailureHiPower = 202
        errorPOSTFailureI2C = 203
        errorPOSTFailureGPIF = 204
        errorPOSTFailureUsbSpeed = 205
        errorPOSTDiagFailure = 206

        # General Msmt
        errorBufferAllocFailed = 301
        errorParameter = 302
        errorDataNotReady = 304

        # Spectrum
        errorParameterTraceLength = 1101
        errorMeasurementNotEnabled = 1102
        errorSpanIsLessThanRBW = 1103
        errorFrequencyOutOfRange = 1104

        # IF streaming
        errorStreamADCToDiskFileOpen = 1201
        errorStreamADCToDiskAlreadyStreaming = 1202
        errorStreamADCToDiskBadPath = 1203
        errorStreamADCToDiskThreadFailure = 1204
        errorStreamedFileInvalidHeader = 1205
        errorStreamedFileOpenFailure = 1206
        errorStreamingOperationNotSupported = 1207
        errorStreamingFastForwardTimeInvalid = 1208
        errorStreamingInvalidParameters = 1209
        errorStreamingEOF = 1210

        # IQ streaming
        errorIQStreamInvalidFileDataType = 1301
        errorIQStreamFileOpenFailed = 1302
        errorIQStreamBandwidthOutOfRange = 1303

        # -----------------
        # Internal errors
        # -----------------
        errorTimeout = 3001
        errorTransfer = 3002
        errorFileOpen = 3003
        errorFailed = 3004
        errorCRC = 3005
        errorChangeToFlashMode = 3006
        errorChangeToRunMode = 3007
        errorDSPLError = 3008
        errorLOLockFailure = 3009
        errorExternalReferenceNotEnabled = 3010
        errorLogFailure = 3011
        errorRegisterIO = 3012
        errorFileRead = 3013

        errorDisconnectedDeviceRemoved = 3101
        errorDisconnectedDeviceNodeChangedAndRemoved = 3102
        errorDisconnectedTimeoutWaitingForADcData = 3103
        errorDisconnectedIOBeginTransfer = 3104
        errorOperationNotSupportedInSimMode = 3015

        errorFPGAConfigureFailure = 3201
        errorCalCWNormFailure = 3202
        errorSystemAppDataDirectory = 3203
        errorFileCreateMRU = 3204
        errorDeleteUnsuitableCachePath = 3205
        errorUnableToSetFilePermissions = 3206
        errorCreateCachePath = 3207
        errorCreateCachePathBoost = 3208
        errorCreateCachePathStd = 3209
        errorCreateCachePathGen = 3210
        errorBufferLengthTooSmall = 3211
        errorRemoveCachePath = 3212
        errorGetCachingDirectoryBoost = 3213
        errorGetCachingDirectoryStd = 3214
        errorGetCachingDirectoryGen = 3215
        errorInconsistentFileSystem = 3216

        errorWriteCalConfigHeader = 3301
        errorWriteCalConfigData = 3302
        errorReadCalConfigHeader = 3303
        errorReadCalConfigData = 3304
        errorEraseCalConfig = 3305
        errorCalConfigFileSize = 3306
        errorInvalidCalibConstantFileFormat = 3307
        errorMismatchCalibConstantsSize = 3308
        errorCalConfigInvalid = 3309

        # flash
        errorFlashFileSystemUnexpectedSize = 3401
        errorFlashFileSystemNotMounted = 3402
        errorFlashFileSystemOutOfRange = 3403
        errorFlashFileSystemIndexNotFound = 3404
        errorFlashFileSystemReadErrorCRC = 3405
        errorFlashFileSystemReadFileMissing = 3406
        errorFlashFileSystemCreateCacheIndex = 3407
        errorFlashFileSystemCreateCachedDataFile = 3408
        errorFlashFileSystemUnsupportedFileSize = 3409
        errorFlashFileSystemInsufficentSpace = 3410
        errorFlashFileSystemInconsistentState = 3411
        errorFlashFileSystemTooManyFiles = 3412
        errorFlashFileSystemImportFileNotFound = 3413
        errorFlashFileSystemImportFileReadError = 3414
        errorFlashFileSystemImportFileError = 3415
        errorFlashFileSystemFileNotFoundError = 3416
        errorFlashFileSystemReadBufferTooSmall = 3417
        errorFlashWriteFailure = 3418
        errorFlashReadFailure = 3419
        errorFlashFileSystemBadArgument = 3420
        errorFlashFileSystemCreateFile = 3421

        # Aux monitoring
        errorMonitoringNotSupported = 3501
        errorAuxDataNotAvailable = 3502

        # battery
        errorBatteryCommFailure = 3601
        errorBatteryChargerCommFailure = 3602
        errorBatteryNotPresent = 3603

        # EST
        errorESTOutputPathFile = 3701
        errorESTPathNotDirectory = 3702
        errorESTPathDoesntExist = 3703
        errorESTUnableToOpenLog = 3704
        errorESTUnableToOpenLimits = 3705

        # Revision information
        errorRevisionDataNotFound = 3801

        # alignment
        error112MHzAlignmentSignalLevelTooLow = 3901
        error10MHzAlignmentSignalLevelTooLow = 3902
        errorInvalidCalConstant = 3903
        errorNormalizationCacheInvalid = 3904
        errorInvalidAlignmentCache = 3905

        # acq status
        errorADCOverrange = 9000
        errorOscUnlock = 9001

        errorNotSupported = 9901

        errorPlaceholder = 9999
        notImplemented = -1

    ##########################################################
    # Global Type Definitions
    ##########################################################

    ctypedef struct Cplx32:
        float i
        float q

    ctypedef struct CplxInt32:
        int i
        int q

    ctypedef struct CplxInt16:
        int i
        int q

    # AcqDataStatus enum defined in rsa_api.pyx

    ##########################################################
    # Device Connection and Info
    ##########################################################

    const char* DEVICE_GetErrorString(ReturnStatus status)

    # DEVSRCH enum defined in rsa_api.pyx

    ReturnStatus DEVICE_Search(int* numDevicesFound, int deviceIDs[], const char deviceSerial[20][100], const char deviceType[20][20])
    # DEVICE_SearchW not imported
    #
    # DEVICE_Search() usage
    # cdef int numDevicesFound = 0
    # cdef int* deviceIDs
    # cdef char deviceSerial[DEVSRCH_MAX_NUM_DEVICES][DEVSRCH_SERIAL_MAX_STRLEN]
    # cdef char deviceType[20][20]
    #
    # rs = DEVICE_Search(&numDevicesFound, deviceIDs, deviceSerial, deviceType)
    # print('Number of devices: {}'.format(numDevicesFound))
    # print('Device serial numbers: {}'.format(deviceSerial[0].decode()))
    # print('Device type: {}'.format(deviceType[0].decode()))

    # THERE IS A PROBLEM WITH CONVERTING INT * TYPES TO PYTHON OBJECTS
    # ReturnStatus DEVICE_SearchInt(int* numDevicesFound, int* deviceIDs[], const char** deviceSerial[], const char** deviceType[])
    # DEVICE_SearchIntW not imported
    # cdef int numDevicesFound = 0
    # cdef int* deviceIDs
    # cdef char** deviceSerial
    # cdef char** deviceType
    #
    # rs = DEVICE_SearchInt(&numDevicesFound, &deviceIDs, &deviceSerial, &deviceType)
    # print('Number devices: {}'.format(numDevicesFound))
    # print('Device serial numbers: {}'.format(deviceSerial[0].decode()))
    # print('Device type: {}'.format(deviceType[0].decode()))


    ReturnStatus DEVICE_Connect(int deviceID)
    ReturnStatus DEVICE_Reset(int deviceID)
    ReturnStatus DEVICE_Disconnect()

    # DEVINFO_MAX_STRLEN defined in rsa_api.pyx
    
    ReturnStatus DEVICE_GetNomenclature(char* nomenclature)
    # ReturnStatus DEVICE_GetNomenclatureW(wchar_t * nomenclature)
    ReturnStatus DEVICE_GetSerialNumber(char* serialNum)
    ReturnStatus DEVICE_GetAPIVersion(char* apiVersion)
    ReturnStatus DEVICE_GetFWVersion(char* fwVersion)
    ReturnStatus DEVICE_GetFPGAVersion(char* fpgaVersion)
    ReturnStatus DEVICE_GetHWVersion(char* hwVersion)

    ctypedef struct DEVICE_INFO:
        char nomenclature[100]
        char serialNum[100]
        char apiVersion[100]
        char fwVersion[100]
        char fpgaVersion[100]
        char hwVersion[100]
        
    ReturnStatus DEVICE_GetInfo(DEVICE_INFO* devInfo)

    ReturnStatus DEVICE_GetOverTemperatureStatus(bint* overTemperature)

    ##########################################################
    # Device Configuration (global)
    ##########################################################

    ReturnStatus CONFIG_Preset()
    
    ReturnStatus CONFIG_SetReferenceLevel(double refLevel)
    ReturnStatus CONFIG_GetReferenceLevel(double* refLevel)
    ReturnStatus CONFIG_GetMaxCenterFreq(double* maxCF)
    ReturnStatus CONFIG_GetMinCenterFreq(double* minCF)
    ReturnStatus CONFIG_SetCenterFreq(double cf)
    ReturnStatus CONFIG_GetCenterFreq(double* cf)
    
    ReturnStatus CONFIG_SetExternalRefEnable(bint exRefEn)
    ReturnStatus CONFIG_GetExternalRefEnable(bint* exRefEn)
    ReturnStatus CONFIG_GetExternalRefFrequency(double* extFreq)
    
    ReturnStatus CONFIG_GetAutoAttenuationEnable(bint* enable)
    ReturnStatus CONFIG_SetAutoAttenuationEnable(bint enable)
    ReturnStatus CONFIG_GetRFPreampEnable(bint* enable)
    ReturnStatus CONFIG_SetRFPreampEnable(bint enable)
    ReturnStatus CONFIG_GetRFAttenuator(double* value)
    ReturnStatus CONFIG_SetRFAttenuator(double value)
    
    ##########################################################
    # Trigger Configuration
    ##########################################################
    
    ctypedef enum TriggerMode:
        freeRun = 0
        triggered = 1
        
    ctypedef enum TriggerSource:
        TriggerSourceExternal = 0
        TriggerSourceIFPowerLevel = 1
        
    ctypedef enum TriggerTransition:
        TriggerTransitionLH = 1
        TriggerTransitionHL = 2
        TriggerTransitionEither = 3
    
    ReturnStatus TRIG_SetTriggerMode(TriggerMode mode)
    ReturnStatus TRIG_GetTriggerMode(TriggerMode* mode)
    ReturnStatus TRIG_SetTriggerSource(TriggerSource source)
    ReturnStatus TRIG_GetTriggerSource(TriggerSource* source)
    ReturnStatus TRIG_SetTriggerTransition(TriggerTransition transition)
    ReturnStatus TRIG_GetTriggerTransition(TriggerTransition* transition)
    ReturnStatus TRIG_SetIFPowerTriggerLevel(double level)
    ReturnStatus TRIG_GetIFPowerTriggerLevel(double* level)
    ReturnStatus TRIG_SetTriggerPositionPercent(double trigPosPercent)
    ReturnStatus TRIG_GetTriggerPositionPercent(double* trigPosPercent)
    ReturnStatus TRIG_ForceTrigger()
    
    ##########################################################
    # Device Alignment
    ##########################################################
    
    ReturnStatus ALIGN_GetWarmupStatus(bint* warmedUp)
    ReturnStatus ALIGN_GetAlignmentNeeded(bint* needed)
    ReturnStatus ALIGN_RunAlignment()
    
    ##########################################################
    # Device Operation (global)
    ##########################################################
    
    ReturnStatus DEVICE_GetEnable(bint* enable)
    ReturnStatus DEVICE_Run()
    ReturnStatus DEVICE_Stop()
    ReturnStatus DEVICE_PrepareForRun()
    ReturnStatus DEVICE_StartFrameTransfer()
    
    # DEVEVENT enum defined in rsa_api.pyx
    
    ReturnStatus DEVICE_GetEventStatus(int eventID, bint* eventOccurred, uint64_t* eventTimestamp)
    
    ##########################################################
    # System/Reference Time
    ##########################################################
